src/shared/Nav.css
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");

.navBar {
	position: sticky;
	top: 0px;
	z-index: 1px;
}
#linksList {
	display: none;
	justify-content: center;
	background-color: #eae2b7;
	font-size: 30px;
	padding: 10px;
}
.mobileNavBar {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	background-color: rgb(201, 74, 17);
}
.navAbout {
	text-decoration: none;
	color: rgb(201, 74, 17);
}
/* font size of .appTitle and .navIcon need to be modified together to make it look good. the Icon has empty space as part of its size so it has to be adjusted manually */
.appTitle {
	text-decoration: none;
	color: #eae2b7;
	font-size: 48px;
	padding: 10px;
	font-family: "Fredoka One", cursive;
}
.navIcon {
	font-size: 46px;
	padding: 7px 10px;
}
/* Connected to comment above */

